--- a/sarah.client/src/app/home/home.component.html
+++ b/sarah.client/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h1 class="text-primary">Welcome to Bootstrap with Angular 18</h1>
+        <p class="lead">This is a simple example of using Bootstrap in an Angular application.</p>
+        <p class="lead">{{ message }}</p>
+      </div>
+    </div>
+  </div>
